force-app/main/default/objects/Job__c/fields/IsCompletedinWindow__c.field-meta.xml
<CustomField>
    <fullName>IsCompletedinWindow__c</fullName>
    <description>The checkbox that indicates if the job was completed between Project Start Date and Project End Date.</description>
    <formula>AND(( JobCompletedDate__c &gt;=OriginalProjectStartDate__c),( JobCompletedDate__c &lt;=OriginalProjectEndDate__c))&amp;&amp; Text(CompletionStatus__c)=&quot;Completed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job was completed between Project Start Date and Project End Date.</inlineHelpText>
    <label>Completed in Window</label>
    <type>Checkbox</type>
</CustomField>